--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body{
+    padding: 1.5rem;
+}
+
 .ibm-plex-mono-regular {
   font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
@@ -48,14 +52,17 @@ h3{
 h4{
     font-family: "IBM Plex Mono", monospace;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 14px;
+    margin-left: 1rem;
 }
 
 p{
-    font-family: "B612", sans-serif;
+    font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
+    font-size: 14px;
+    margin-top: 0;
+    margin-left: 1rem;
+    margin-bottom: 2rem;
 }
 
 .logo-container{
@@ -75,8 +82,8 @@ header{
     padding: 66px 24px 13px 24px;
 }
 .header-wrapper, .section-head, .expand-product{
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav-container{
@@ -88,20 +95,24 @@ justify-content: space-between;
 .nav-button{
     width: 26px;
 }
-.hero-container{
+.hero-container, .tech-img-container, .motion-img-container{
     display: flex;
     justify-content: center;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 .button{
+    font-family: "B612", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
     display: inline-block;
     border: 1px solid black;
     padding: 8px 6px;
-    margin-left: 10%;
+    margin-left: 1rem;
 }
 .section-head{
-    margin: 80px 10% 40px 10%;
+    margin: 80px 1rem 40px 1rem;
 }
 
 .arrow-controls{
@@ -110,7 +121,8 @@ justify-content: space-between;
 
 .product-container{
     width: 225px;
-    margin: 2rem;
+    margin: 1rem;
+    margin-bottom: 100px;
 }
 .product-img-container{
     height: 345px;
@@ -119,9 +131,12 @@ justify-content: space-between;
     justify-content: center;
     
 }
-.product, .tech-img{
+.product, .tech-img, .motion-img{
     height: 100%;
     width: 100%;
+}
+.product-name{
+    margin-left: 0;
 }
 .color-box{
     width: 13px;
@@ -129,8 +144,21 @@ justify-content: space-between;
     background-color: #464646;
     display: inline-block;
 }
+.ai-design{
+    width: 100%;
+    height: 150px;
+}
+.tech{
+    margin-bottom: 60px;
+}
 .tech-img-container{
-    margin: 2rem;
+    height: 345px;
+    width: 345px;
+    object-fit: cover;
+}
+.motion-img-container{
+    width: 345px;
+    height: 490px;
 }
 
 @media screen and (min-width:600px) {
