--- a/style.css
+++ b/style.css
@@ -1,25 +1,32 @@
-*{
+:root {
+	--background: #f1f0ec;
+}
+
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     padding: 1.5rem;
+	background-color: var(--background);
+	margin-left: 0;
+	
 }
 
-h3{
+h3 {
     font-family: "Rubik", sans-serif;
     font-weight: 700;
     margin: 0;
 }
 
-h4{
+h4 {
     font-family: "IBM Plex Mono", monospace;
     font-weight: 700;
     font-size: 14px;
     margin-left: 1rem;
 }
 
-p{
+p {
     font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
     font-size: 14px;
@@ -28,36 +35,143 @@ p{
     margin-bottom: 2rem;
 }
 
-.logo-container{
+/* Header Styling */
+
+.logo-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
 }
-.logo{
+.logo {
     width: 34px;
 }
-header{
-    width: 100%;
-    height: 130px;
+header {
+    width: 100vw;
+    height: 14vh;
     border-bottom: 1.5px solid black;
     padding: 66px 24px 13px 24px;
 }
-.header-wrapper, .section-head, .expand-product{
+
+.header-wrapper, .section-head, .expand-product {
     display: flex;
     justify-content: space-between;
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     align-items: center;
     flex-shrink: 0;
     gap: 1rem;
 }
-.nav-button{
+.nav-button {
     width: 26px;
 }
+
+/* Hidden Menu */
+
+.header-menu {
+	height: 82.5vh;
+	width: 100vw;
+	background-color: var(--background);
+	position: relative;
+	justify-self: center;
+	top: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.search-bar {
+	position: relative;
+	display: flex;
+	align-items: center;
+	width: 85vw;
+	margin: 3rem;
+
+}
+
+.search-icon {
+	position: absolute;
+	right: 1rem;
+	align-self: center;
+}
+
+#searchInput {
+	background: none;
+	width: 85vw;
+	height: 3rem;
+	border: 1px solid black;
+}
+
+input::placeholder {
+	font-family: "IBM Plex Mono";
+	padding-left: 1rem;
+}
+.slogan {
+	width: 85vw;
+	display: flex;
+	justify-content: left;
+}
+
+.discover {
+  	width: 17.375rem;
+  	height: 2.25rem;
+  	position: relative;
+  	font-size: 0.875rem;
+  	text-transform: uppercase;
+  	display: inline-block;
+  	font-family: 'IBM Plex Mono';
+  	color: #000;
+  	text-align: left;
+	font-weight: 700;
+	margin-left: 0;
+}
+
+.menu-section {
+	width: 85vw;
+	align-self: center;
+	display: flex;
+	flex-direction: column;
+	margin-top: 3rem;
+}
+
+.menu-option {
+	font-family: "IBM Plex Mono";
+	font-size: .875rem;
+	font-weight: 400;
+	align-self: left;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
+.menu-arrow {
+	padding-left: .5rem;
+}
+
+.menu-footer {
+	width: 100vw;
+	position: absolute; 
+	bottom: 0;
+}
+
+.menu-footer-content {
+	font-family: "IBM Plex Mono";
+	font-size: .75rem;
+	font-weight: 700;
+	padding: 1.5rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+.hidden {
+	display: none;
+}
+
+
+/* Main */
+
 .hero-container, .tech-img-container, .motion-img-container{
     display: flex;
     justify-content: center;
