--- a/style.css
+++ b/style.css
@@ -48,10 +48,10 @@ p {
     width: 34px;
 }
 header {
-    width: 100vw;
+    width: 100%;
     height: 14vh;
     border-bottom: 1.5px solid black;
-    padding: 66px 24px 13px 24px;
+    padding: 50px 24px 13px 24px;
 }
 
 .header-wrapper, .section-head, .expand-product {
@@ -73,7 +73,7 @@ header {
 
 .header-menu {
 	height: 82.5vh;
-	width: 100vw;
+	width: 100%;
 	background-color: var(--background);
 	position: relative;
 	justify-self: center;
@@ -151,7 +151,7 @@ input::placeholder {
 }
 
 .menu-footer {
-	width: 100vw;
+	width: 100%;
 	position: absolute; 
 	bottom: 0;
 }
@@ -196,10 +196,20 @@ input::placeholder {
     gap: 1rem;
 }
 
+.product-scroll{
+	display: flex;
+	overflow: auto;
+	white-space: nowrap;
+}
+::-webkit-scrollbar{
+	display: none;
+}
+
 .product-container{
     width: 225px;
     margin: 1rem;
     margin-bottom: 100px;
+	flex-shrink: 0;
 }
 .product-img-container{
     height: 345px;
