--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@
 }
 
 body {
-    padding: 1.5rem;
 	background-color: var(--background);
-	margin-left: 0;
+	margin: 0;
 	
+}
+
+main{
+	padding: 1.5rem;
 }
 
 h3 {
