--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
 	--background: #f1f0ec;
+	--ibm-plex: "IBM Plex Mono", monospace;
 }
 
 * {
@@ -9,8 +10,7 @@
 body {
     padding: 1.5rem;
 	background-color: var(--background);
-	margin-left: 0;
-	
+	margin: 0;
 }
 
 h3 {
@@ -20,14 +20,14 @@ h3 {
 }
 
 h4 {
-    font-family: "IBM Plex Mono", monospace;
+    font-family: var(--ibm-plex);
     font-weight: 700;
     font-size: 14px;
     margin-left: 1rem;
 }
 
 p {
-    font-family: "IBM Plex Mono", monospace;
+    font-family: var(--ibm-plex);
     font-weight: 400;
     font-size: 14px;
     margin-top: 0;
@@ -48,10 +48,10 @@ p {
     width: 34px;
 }
 header {
-    width: 100%;
+    width: 100vw;
     height: 14vh;
     border-bottom: 1.5px solid black;
-    padding: 50px 24px 13px 24px;
+    padding: 66px 24px 13px 24px;
 }
 
 .header-wrapper, .section-head, .expand-product {
@@ -73,7 +73,7 @@ header {
 
 .header-menu {
 	height: 82.5vh;
-	width: 100%;
+	width: 100vw;
 	background-color: var(--background);
 	position: relative;
 	justify-self: center;
@@ -151,7 +151,7 @@ input::placeholder {
 }
 
 .menu-footer {
-	width: 100%;
+	width: 100vw;
 	position: absolute; 
 	bottom: 0;
 }
@@ -231,10 +231,19 @@ input::placeholder {
     background-color: #464646;
     display: inline-block;
 }
-.ai-design{
-    width: 100%;
-    height: 150px;
+
+.description {
+	width: 14.0625rem;
+	height: 2.53913rem;
+	color: #000;
+	font-family: var(--ibm-plex);
+	font-size: 0.75rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	letter-spacing: -0.0225rem;
 }
+
 .tech{
     margin-bottom: 60px;
 }
