--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ input::placeholder {
 }
 
 .product-scroll{
+	height: 33rem;
 	display: flex;
 	overflow: auto;
 	white-space: nowrap;
@@ -239,6 +240,7 @@ input::placeholder {
 .description {
 	width: 14.0625rem;
 	height: 2.53913rem;
+	text-wrap: wrap;
 	color: #000;
 	font-family: var(--ibm-plex);
 	font-size: 0.75rem;
@@ -246,6 +248,11 @@ input::placeholder {
 	font-weight: 400;
 	line-height: normal;
 	letter-spacing: -0.0225rem;
+}
+
+.description p {
+	margin: 0;
+	padding-top: 1rem;
 }
 
 .tech{
