Feature: restructured footer menu and added input form for newsletter. styling for newsletter still in progress

--- a/style.css
+++ b/style.css
@@ -273,60 +273,47 @@ input::placeholder {
 footer {
   	width: 100%;
   	height: 53.25rem;
+	padding: 1.5rem;
   	position: relative;
-  	background-color: #fff;
+  	background-color: var(--background);
   	overflow: hidden;
   	text-align: left;
   	font-size: 0.625rem;
   	color: #000;
   	font-family: 'B612';
+	
+}
+.footer-container {
+	display: flex; 
+	flex-direction: column;
 }
 
-.kontakt {
-  	position: absolute;
-  	top: 8.813rem;
-  	left: 1.25rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
+/* Footer Menu */
+.footer-menu-container {
+	width: 80vw;
+	display: flex; 
+	flex-direction: column;
+	margin: 1rem;
 }
-.support {
-  	position: absolute;
-  	top: 11.313rem;
-  	left: 1.25rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
+.footer-menu-item {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
-.fretag {
-  	position: absolute;
-  	top: 13.813rem;
-  	left: 1.25rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
+
+.footer-menu-item h5 {
+	font-size: .625rem;
 }
-.flj-oss {
-  	position: absolute;
-  	top: 16.313rem;
-  	left: 1.25rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
+
+/* Newsletter */
+
+.newsletter-container {
+	display: flex;
+	flex-direction: column;
+	
 }
-.rttslig {
-  	position: absolute;
-  	top: 18.813rem;
-  	left: 1.25rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
-}
+
+
 .handla-i {
   	position: absolute;
   	top: 36.75rem;
@@ -343,27 +330,7 @@ footer {
   	display: inline-block;
   	width: 7.813rem;
 }
-.nyhetsbrev {
-  	position: absolute;
-  	top: 27.438rem;
-  	left: 1.438rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
-}
-.e-postadress {
-  	position: absolute;
-  	top: 29.188rem;
-  	left: 1.438rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 7.813rem;
-  	height: 0.75rem;
-}
-.span {
-  	font-size: 0.75rem;
-}
+
 .sverige {
   	position: absolute;
   	top: 36.75rem;
@@ -397,31 +364,7 @@ footer {
 .fretagsinformation {
   	text-decoration: underline;
 }
-.ange-din-e-postadress {
-  	position: absolute;
-  	top: 32.188rem;
-  	left: 1.438rem;
-  	color: #4a4749;
-}
-.footer-stoneisland-item {
-  	position: absolute;
-  	top: 32.188rem;
-  	left: 17rem;
-  	background-color: #fff;
-  	border: 1px solid #000;
-  	box-sizing: border-box;
-  	width: 5.75rem;
-  	height: 1.438rem;
-}
-.fortstta {
-  	position: absolute;
-  	top: 32.563rem;
-  	left: 18.15rem;
-  	text-transform: uppercase;
-  	display: inline-block;
-  	width: 3.688rem;
-  	height: 0.75rem;
-}
+
 .div {
   	position: absolute;
   	top: 48.625rem;
@@ -432,55 +375,7 @@ footer {
   	width: 1.438rem;
   	height: 0.5rem;
 }
-.mageplus-icon {
-  	position: absolute;
-  	top: 8.688rem;
-  	left: 21.875rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.footer-stoneisland-mageplus-icon {
-  	position: absolute;
-  	top: 11.188rem;
-  	left: 21.875rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.mageplus-icon2 {
-  	position: absolute;
-  	top: 13.688rem;
-  	left: 21.875rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.mageplus-icon3 {
-  	position: absolute;
-  	top: 16.188rem;
-  	left: 21.875rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.mageplus-icon4 {
-  	position: absolute;
-  	top: 18.688rem;
-  	left: 21.875rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.mageplus-icon5 {
-  	position: absolute;
-  	top: 36.625rem;
-  	left: 22.063rem;
-  	width: 1rem;
-  	height: 1rem;
-}
-.mageplus-icon6 {
-  	position: absolute;
-  	top: 38.875rem;
-  	left: 22.063rem;
-  	width: 1rem;
-  	height: 1rem;
-}
+
 
 
 
