--- a/style.css
+++ b/style.css
@@ -39,6 +39,62 @@ p {
     margin-bottom: 2rem;
 }
 
+/*popup*/
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+	left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Slightly transparent */
+    display: none; /* Hidden by default */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.popup {
+    width: 24rem;
+	height: 13rem;
+    animation: fadeIn 0.5s;
+	background-color: white;
+	border: 1px solid black;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding: 1rem;
+	position: relative;
+}
+.popup h4, p{
+	margin: 1rem;
+}
+.close{
+	height: 1rem;
+	width: 1rem;
+	position: absolute;
+	margin: 10px;
+	top: 0;
+	right: 0;
+}
+.email-container{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#email-input{
+	border: none;
+	border-bottom: 1px solid black;
+	height: 2rem;
+	width: 15rem;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 /* Header Styling */
 
 .logo-container {
@@ -55,7 +111,7 @@ header {
     width: 100vw;
     height: 14vh;
     border-bottom: 1.5px solid black;
-    padding: 66px 24px 13px 24px;
+    padding: 3rem 1.5rem 1rem 1.5rem;
 }
 
 .header-wrapper, .section-head, .expand-product {
@@ -179,7 +235,8 @@ input::placeholder {
 .hero-container, .tech-img-container, .motion-img-container{
     display: flex;
     justify-content: center;
-    margin: 1rem;
+    margin: 0.5rem;
+	margin-bottom: 1rem;
 }
 
 .button{
@@ -192,6 +249,9 @@ input::placeholder {
     padding: 8px 6px;
     margin-left: 1rem;
 }
+
+/* Products */
+
 .section-head{
     margin: 80px 1rem 40px 1rem;
 }
@@ -231,9 +291,10 @@ input::placeholder {
     margin-left: 0;
 }
 .color-box{
-    width: 13px;
-    height: 13px;
-    background-color: #464646;
+    width: 15px;
+    height: 15px;
+	border: 1px solid black;
+	margin-right: 8px;
     display: inline-block;
 }
 
