--- a/style.css
+++ b/style.css
@@ -296,11 +296,10 @@ input::placeholder {
     width: 100%;
 	object-fit: cover;
 }
-.product-name{
-    margin-left: 0;
-}
+
+
 .color-box{
-    width: 15px;
+	width: 15px;
     height: 15px;
 	border: 1px solid black;
 	margin-right: 8px;
@@ -319,16 +318,32 @@ input::placeholder {
 }
 
 .color-box.active::after {
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 15px;
-  height: 2px;
-  background: black;
+	content: "";
+	position: absolute;
+	bottom: -6px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 15px;
+	height: 2px;
+	background: black;
 }
 
+.expand-product{
+	align-items: center;
+}
+.product-name{
+	margin-left: 0;
+}
+.toggle-btn{
+	font-size: 24px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	width: 30px;
+	height: 30px;
+	padding: 0;
+	text-align: right;
+}
 .description {
 	width: 14.0625rem;
 	height: 2.53913rem;
@@ -340,7 +355,16 @@ input::placeholder {
 	font-weight: 400;
 	line-height: normal;
 	letter-spacing: -0.0225rem;
+	opacity: 0;
 }
+
+.description.open {
+	opacity: 1;
+	max-height: 200px; /* enough room for content */
+	transition: max-height 0.25s ease-in, opacity 0.2s ease-in;
+}
+
+
 
 .description p {
 	margin: 0;
