Added text info to tech section

--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ h4 {
     font-size: 14px;
 }
 
+h5 {
+	font-family: var(--ibm-plex);
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 1.3;
+	margin-top: 20px;
+	margin-bottom: 2px;
+}
+
 p {
     font-family: var(--ibm-plex);
     font-weight: 400;
@@ -365,12 +374,13 @@ input::placeholder {
 }
 
 
-
 .description p {
 	margin: 0;
 	padding-top: 1rem;
 }
 
+
+/*Tech section*/
 .tech{
 
     margin-top: 80px;
@@ -384,6 +394,18 @@ input::placeholder {
 .motion-img-container{
     width: 345px;
     height: 490px;
+}
+
+.tech-icon, h5{
+	display: inline-block;
+}
+
+.tech-info-container p{
+	margin: 0;
+}
+
+.tech-info-container:last-child{
+	margin-bottom: 3rem;
 }
 
 /* Footer Styling */
