--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ input::placeholder {
     font-family: "B612", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
+    font-size: .75rem;
     display: inline-block;
     border: 1px solid black;
     padding: 8px 6px;
@@ -390,7 +390,6 @@ input::placeholder {
 
 footer {
   	width: 100%;
-  	height: 53.25rem;
 	padding: 1.5rem;
   	position: relative;
   	background-color: var(--background);
@@ -452,17 +451,47 @@ input {
 	width: 14.875rem;
 }
 
-.button {
+.button.footer {
 	display: flex;
 	justify-content: center;
 	width: 5.96994rem;
-	height: 1.4375rem;
 	padding: 0.3125rem 0;
 	justify-content: center;
 	align-items: center;
-	gap: 0.625rem;
 }
 
+.language-container {
+	display: flex;
+	flex-direction: column;
+	width: 85vw;
+}
+
+.selector {
+	display: flex;
+	width: 85vw;
+	align-items: center;
+	padding: .75rem 0;
+	gap: 3.43rem;
+}
+
+.selector h3, p {
+	margin: 0;
+	font-size: .75rem;
+}
+
+.footer-footer {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: left;
+	justify-content: left;
+}
+
+.footer-footer p{
+	font-size: .625rem;
+	margin: 0;
+	justify-self: left;
+}
 .handla-i {
   	position: absolute;
   	top: 36.75rem;
