--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 body {
 	background-color: var(--background);
 	margin: 0;
-	
 }
 
 main{
@@ -149,12 +148,14 @@ header {
 .nav-button {
     width: 26px;
 	margin-top: 5px;
+	cursor: pointer;
 }
 
 .menu-x {
 	width: 26px;
 	padding: 4px;
 	margin-top: 5px;
+	cursor: pointer;
 }
 
 /* Hidden Menu */
@@ -165,10 +166,20 @@ header {
 	background-color: var(--background);
 	position: relative;
 	justify-self: center;
-	top: 1.75rem;
+	top: 0.7rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	z-index: 9999;
+}
+
+body.menu-open {
+overflow: hidden;
+}
+
+body.menu-open main,
+body.menu-open .product-scroll {
+pointer-events: none;
 }
 
 .search-bar {
@@ -326,7 +337,6 @@ input#searchInput::placeholder {
     display: inline-block;
 	cursor: pointer;
 	position: relative;
-	z-index: -1;
 }
 .stone{
 	background-color: var(--stone);
@@ -347,6 +357,7 @@ input#searchInput::placeholder {
 	width: 15px;
 	height: 2px;
 	background: black;
+	z-index: -1;
 }
 
 .expand-product{
