--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 	--rubik: "Rubik", sans-serif;
 	--ibm-plex-sans: "IBM Plex Sans", sans-serif;
 }
-
-@media screen and (min-width: 393px) {
 	
 * {
     box-sizing: border-box;
@@ -79,11 +77,15 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-	padding: 1rem;
+	padding: 1.5rem;
 	position: relative;
 }
 .popup h4{
-	margin: 1rem;
+	margin: 10px;
+}
+.popup p{
+	font-size: 14px;
+	padding: 0.5rem;
 }
 .close{
 	height: 1rem;
@@ -93,17 +95,27 @@ p {
 	top: 0;
 	right: 0;
 }
-.email-container{
+.popup-form{
 	width: 100%;
 	display: flex;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+}
+
+.email-container{
+	width: 100%;
+
 }
 #email-input{
 	border: none;
 	border-bottom: 1px solid black;
 	height: 2rem;
 	width: 15rem;
+}
+button#email-signup{
+	display: block;
+	width: 5rem;
 }
 
 @keyframes fadeIn {
@@ -295,6 +307,7 @@ input#searchInput::placeholder {
     border: 1px solid black;
     padding: 8px 6px;
 	background: white;
+	cursor: pointer;
 }
 
 /* Products */
@@ -584,8 +597,3 @@ input#email::placeholder {
   gap: .5rem;
 }
 
-
-
-
-    
-}
