--- a/style.css
+++ b/style.css
@@ -298,6 +298,28 @@ input#searchInput::placeholder {
 	justify-self: center;
 }
 
+.hero-container{
+	width: 100%;
+	height: 75vh;
+	border: 1px solid black;
+	position: relative;
+}
+.hero-img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.hero-text{
+	position: absolute;
+	left: 2.5rem;
+	bottom: 2.5rem;
+	width: 14.5rem;
+}
+.hero-text h4, .hero-text p{
+	color: white;
+}
+
 .button{
     font-family: "B612", sans-serif;
     font-weight: 400;
