--- a/large-media.css
+++ b/large-media.css
@@ -251,9 +251,14 @@ input#searchInput::placeholder {
 
 
 /* Main */
+main{
+	padding-top: 0;
+}
 
 .hero-container{
 	width: 100vw;
+	margin-top: 0;
+
 }
 
 .button{
