--- a/style.css
+++ b/style.css
@@ -335,11 +335,23 @@ input#searchInput::placeholder {
 /* Products */
 
 .section-head{
-    margin: 80px 1rem 30px 1rem;
+    margin: 80px 1rem 1rem 0;
+	width: 75vw;
+	display: flex;
+	justify-content: space-between;
+	gap: 2rem;
 }
 
-.arrow-controls{
+.arrow-control {
 	width: 1.5rem;
+	display: flex;
+	align-items: center;
+	gap: 1.44rem;
+	padding-left: .9rem;
+}
+
+.arrows {
+	width: .5625rem;
 }
 
 .product-scroll{
