--- a/large-media.css
+++ b/large-media.css
@@ -272,7 +272,7 @@ main{
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 120%;
-    margin-bottom: .75rem;
+    margin-bottom: 1rem;
 } 
 
 .hero-text p {
@@ -280,6 +280,7 @@ main{
     font-weight: 400;
     line-height: 150%; /* 1.5rem */
     letter-spacing: -0.03rem;
+	margin-bottom: 2rem;
 }
 
 .text-container {
