--- a/large-media.css
+++ b/large-media.css
@@ -407,9 +407,6 @@ main{
 }
 
 .tech h4 {
-    position: absolute;
-    left: 6%;
-    top: 5rem;
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 700;
@@ -438,30 +435,48 @@ main{
 h5{
 	font-size: 1rem;
 }
-.tech{
-	position: relative;
+#tech-button{
+	width: 7rem;
+	text-align: center;
+}
+#function-button{
+	width: 15rem;
 }
 
-.tech .button {
-    position: absolute;
-    left: 6%;
-    bottom: 10rem;
-
-}
 
 /* Function */
 
+.function{
+	position: relative;
+	display: flex;
+	flex-direction: row-reverse;
+}
+.function-info{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 5%;
+	width: 50%;
+}
+
+.function h4{
+	font-size: 1.25rem;
+}
+
 .motion-img-container{
-	width: 345px;
-	height: 490px;
+	width: 60%;
+	height: 650px;
 }
 .function p {
 	margin-bottom: 1.16375rem;
+	font-size: 1rem;
 }
 
-.sustainability {
-	margin-top: 1rem;
-	margin-bottom: 4.31rem;
+.small-screen{
+	display: none;
+}
+.big-screen{
+	display: block;
 }
 
 /* Footer Styling */
