Footer: Adjusted margin on menu

--- a/large-media.css
+++ b/large-media.css
@@ -528,6 +528,7 @@ footer {
 .newsletter-lang {
     width: 37.0625rem;
     height: 14.3125rem;
+    margin-right: 1.5rem;
 }
 
 .newsletter-container {
