--- a/style.css
+++ b/style.css
@@ -56,16 +56,18 @@ p {
 /*popup*/
 
 .popup-overlay {
+    display: none;
     position: fixed;
     top: 0;
 	left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Slightly transparent */
-    display: none; /* Hidden by default */
+    background-color: rgba(0, 0, 0, 0.5);
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 9999;
+
 }
 
 .popup {
@@ -95,6 +97,7 @@ p {
 	margin: 10px;
 	top: 0;
 	right: 0;
+	cursor: pointer;
 }
 .popup-form{
 	width: 100%;
@@ -297,7 +300,6 @@ input#searchInput::placeholder {
     margin: 0.5rem;
 	margin-bottom: 2rem;
 	justify-self: center;
-	z-index: -1;
 }
 
 .hero-container{
