--- a/large-media.css
+++ b/large-media.css
@@ -22,7 +22,6 @@ body {
 }
 
 main{
-	padding: 1.5rem;
     padding-top: 0;
 	border-bottom: 1px solid black;
 }
@@ -267,9 +266,11 @@ input#searchInput::placeholder {
 main{
 	padding-top: 0;
 }
-
+.hero{
+	padding: 0;
+}
 .hero-container{
-	width: 100vw;
+	width: 100%;
 	height: 38rem;
     margin-top: 0;
 }
