--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-	background: url(/assets/background-texture.png) no-repeat center 39rem;
+	background: url(./assets/background-texture.png) no-repeat center 39rem;
 	background-color: var(--background);
 	margin: 0;
 }
