--- a/style.css
+++ b/style.css
@@ -347,6 +347,9 @@ input#searchInput::placeholder {
 	background: white;
 	cursor: pointer;
 }
+.button:hover{
+	background-color: var(--background);
+}
 
 /* Products */
 
