--- a/large-media.css
+++ b/large-media.css
@@ -243,7 +243,7 @@ input#searchInput::placeholder {
 .menu-footer {
 	margin-top: 5px;
 	width: 100%;
-	position: relative; 
+	position: absolute; 
 	bottom: 0;
 }
 
@@ -272,7 +272,7 @@ main{
 }
 .hero-container{
 	width: 100%;
-	height: 38rem;
+	height: 85vh;
     margin: 0;
 	padding: 0;
 }
