--- a/large-media.css
+++ b/large-media.css
@@ -419,6 +419,9 @@ main{
 .tech-flex{
 	display: flex;
 	flex-direction: row-reverse;
+	justify-content: space-around;
+	align-items: center;
+	height: 60vh;
 }
 
 .tech h4 {
@@ -428,12 +431,18 @@ main{
     line-height: 120%;
     width: 19.4rem;
 }
-
+.flex-container{
+	width: 55%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+}
 .tech-img-container{
-    width: 37rem;
-    height: 37.125rem;
-	aspect-ratio: 1;
-	flex-shrink: 0;
+    height: 100%;
+	width: auto;
+	aspect-ratio: 1 / 1;
     border: 1px solid black;
 }
 #tech-vid {
@@ -490,7 +499,8 @@ h5{
 
 .motion-img-container{
 	width: 60%;
-	height: 650px;
+	height: auto;
+	aspect-ratio: 1 / 1;
 }
 .function p {
 	margin-bottom: 1.16375rem;
@@ -666,7 +676,8 @@ input#email::placeholder {
 
 	.product-img-container{
 		width: 100%;
-		aspect-ratio: 1 / 2;
+		height: auto;
+		aspect-ratio: 1 / 1.4;
 	}
 	
 } 
