--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ input#searchInput::placeholder {
 	left: 0;
 }
 .hero-container{
+	align-items: flex-start;
 	width: 100%;
 	height: 75vh;
 	border: 1px solid black;
